syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "Service1Impl";

package service1;

// Interface exported by the server.
service Service1 {
  rpc ActiveAlarm(RequestMessage) returns (ResponseMessage) {}

  rpc ActiveLightSensors(RequestMessage) returns (ResponseMessage) {}

  rpc ActivePanicAlarm(RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
  string message = 1;
}

message ResponseMessage {
  string message = 1;
}